--- a/ad9523.dtsi
+++ b/ad9523.dtsi
@@ -88,5 +88,111 @@
 		};
 	};
 
+	trx0_ad9371: ad9371-phy@1 {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		#clock-cells = <1>;
+		compatible = "ad9371";
+
+		/* SPI Setup */
+		reg = <1>;
+		spi-max-frequency = <1000000>;
+
+		/* Clocks */
+		clocks = <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&clk0_ad9523 5>;
+		clock-names = "jesd_rx_clk", "jesd_tx_clk", "jesd_rx_os_clk", "dev_clk", "fmc_clk";
+		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk";
+
+		adi,clocks-clk-pll-vco-freq_khz = <9830400>;
+		adi,clocks-device-clock_khz = <122880>;
+		adi,clocks-clk-pll-hs-div = <4>;
+		adi,clocks-clk-pll-vco-div = <2>;
+
+		adi,jesd204-obs-framer-over-sample = <0>;
+
+		adi,rx-profile-adc-div = <1>;
+		adi,rx-profile-en-high-rej-dec5 = <1>;
+		adi,rx-profile-iq-rate_khz = <122880>;
+		adi,rx-profile-rf-bandwidth_hz = <100000000>;
+		adi,rx-profile-rhb1-decimation = <1>;
+		adi,rx-profile-rx-bbf-3db-corner_khz = <100000>;
+		adi,rx-profile-rx-dec5-decimation = <5>;
+		adi,rx-profile-rx-fir-decimation = <2>;
+
+		adi,obs-profile-adc-div = <1>;
+		adi,obs-profile-en-high-rej-dec5 = <0>;
+		adi,obs-profile-iq-rate_khz = <245760>;
+		adi,obs-profile-rf-bandwidth_hz = <200000000>;
+		adi,obs-profile-rhb1-decimation = <1>;
+		adi,obs-profile-rx-bbf-3db-corner_khz = <100000>;
+		adi,obs-profile-rx-dec5-decimation = <5>;
+		adi,obs-profile-rx-fir-decimation = <1>;
+
+		adi,tx-profile-dac-div = <1>;
+		adi,tx-profile-iq-rate_khz = <245760>;
+		adi,tx-profile-primary-sig-bandwidth_hz = <75000000>;
+		adi,tx-profile-rf-bandwidth_hz = <200000000>;
+		adi,tx-profile-thb1-interpolation = <2>;
+		adi,tx-profile-thb2-interpolation = <1>;
+		adi,tx-profile-tx-bbf-3db-corner_khz = <100000>;
+		adi,tx-profile-tx-dac-3db-corner_khz = <189477>;
+		adi,tx-profile-tx-fir-interpolation = <1>;
+		adi,tx-profile-tx-input-hb-interpolation = <1>;
+
+		adi,sniffer-profile-adc-div = <1>;
+		adi,sniffer-profile-en-high-rej-dec5 = <0>;
+		adi,sniffer-profile-iq-rate_khz = <30720>;
+		adi,sniffer-profile-rf-bandwidth_hz = <20000000>;
+		adi,sniffer-profile-rhb1-decimation = <2>;
+		adi,sniffer-profile-rx-bbf-3db-corner_khz = <100000>;
+		adi,sniffer-profile-rx-dec5-decimation = <5>;
+		adi,sniffer-profile-rx-fir-decimation = <4>;
+	};
+
 };
 
+&trx0_ad9371 {
+
+	compatible = "ad9375";
+
+	adi,dpd-damping = <5>;
+	adi,dpd-num-weights = <1>;
+	adi,dpd-model-version = <2>;
+	adi,dpd-high-power-model-update = <1>;
+	adi,dpd-model-prior-weight = <20>;
+	adi,dpd-robust-modeling = <0>;
+	adi,dpd-samples = <512>;
+	adi,dpd-outlier-threshold = <4096>;
+	adi,dpd-additional-delay-offset = <0>;
+	adi,dpd-path-delay-pn-seq-level = <255>;
+	adi,dpd-weights0-real = <64>;
+	adi,dpd-weights0-imag = <0>;
+	adi,dpd-weights1-real = <0>;
+	adi,dpd-weights1-imag = <0>;
+	adi,dpd-weights2-real = <0>;
+	adi,dpd-weights2-imag = <0>;
+
+	adi,clgc-tx1-desired-gain = <(-2000)>;
+	adi,clgc-tx2-desired-gain = <(-2000)>;
+	adi,clgc-tx1-atten-limit = <0>;
+	adi,clgc-tx2-atten-limit = <0>;
+	adi,clgc-tx1-control-ratio = <75>;
+	adi,clgc-tx2-control-ratio = <75>;
+	adi,clgc-allow-tx1-atten-updates = <1>;
+	adi,clgc-allow-tx2-atten-updates = <1>;
+	adi,clgc-additional-delay-offset = <0>;
+	adi,clgc-path-delay-pn-seq-level = <255>;
+	adi,clgc-tx1-rel-threshold = <600>;
+	adi,clgc-tx2-rel-threshold = <600>;
+	adi,clgc-tx1-rel-threshold-en = <0>;
+	adi,clgc-tx2-rel-threshold-en = <0>;
+
+	adi,vswr-additional-delay-offset = <0>;
+	adi,vswr-path-delay-pn-seq-level = <255>;
+	adi,vswr-tx1-vswr-switch-gpio3p3-pin = <0>;
+	adi,vswr-tx2-vswr-switch-gpio3p3-pin = <1>;
+	adi,vswr-tx1-vswr-switch-polarity = <0>;
+	adi,vswr-tx2-vswr-switch-polarity = <0>;
+	adi,vswr-tx1-vswr-switch-delay_us = <50>;
+	adi,vswr-tx2-vswr-switch-delay_us = <50>;
+};
