--- a/ad9523.dtsi
+++ b/ad9523.dtsi
@@ -99,8 +99,7 @@
 		spi-max-frequency = <1000000>;
 
 		/* Clocks */
-		clocks = <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&
-		clk0_ad9523 5>;
+		clocks = <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&clk0_ad9523 5>, <&clk0_ad9523 5>;
 		clock-names = "jesd_rx_clk", "jesd_tx_clk", "jesd_rx_os_clk", "dev_clk", "fmc_clk";
 		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk";
 
