disable mmc wp pin, add usb phy, change partition

--- a/lte800.dts
+++ b/lte800.dts
@@ -4,16 +4,17 @@
 
 /include/ "zynq-zed.dtsi"
 
-&sdhci1 {
-	status = "okay";
-    xlnx,has-cd = <0x1>;
-    xlnx,has-power = <0x0>;
-};
+//&sdhci1 {
+//	status = "okay";
+//    xlnx,has-cd = <0x1>;
+//    xlnx,has-power = <0x0>;
+//};
 
 &sdhci0 {
 	status = "okay";
-    xlnx,has-cd = <0x1>;
-    xlnx,has-power = <0x0>;
+	disable-wp;
+    //xlnx,has-cd = <0x1>;
+    //xlnx,has-power = <0x0>;
     //xlnx,has-wp = <0x1>;
 };
 
