sd card cd wp pin config

--- a/lte800.dts
+++ b/lte800.dts
@@ -13,9 +13,8 @@
 &sdhci0 {
 	status = "okay";
 	disable-wp;
-    //xlnx,has-cd = <0x1>;
-    //xlnx,has-power = <0x0>;
-    //xlnx,has-wp = <0x1>;
+	xlnx,has-cd = <0x1>;
+	xlnx,has-power = <0x0>;
 };
 
 /include/ "ad9523.dtsi"
