--- a/ad9523.dtsi
+++ b/ad9523.dtsi
@@ -22,10 +22,11 @@
 
 		adi,ref-mode = <2>;
 		adi,osc-in-feedback-enable = <1>;
+		adi,pll1-loopfilter-rzero = <0>;
 		adi,refa-r-div = <200>;
 		adi,refb-r-div = <200>;
 		adi,pll1-feedback-div = <50>;
-		adi,pll1-charge-pump-current-nA = <50000>;
+		adi,pll1-charge-pump-current-nA = <4999>;
 		adi,zero-delay-mode-internal-enable = <1>;
 
 		spi-max-frequency = <1000000>;
@@ -39,7 +40,7 @@
 		adi,pll2-r2-div = <1>;//R分频为1
 		adi,pll2-vco-diff-m1 = <6>;//M分频为6，VCO频率为30.72*120/6=614.4
 
-		adi,rpole2 = <225>;
+		adi,rpole2 = <3>;
 		adi,rzero = <0>;
 		adi,cpole1 = <0>;//参考版本0XF5读取为C0
 
@@ -103,55 +104,99 @@
 		clock-names = "jesd_rx_clk", "jesd_tx_clk", "jesd_rx_os_clk", "dev_clk", "fmc_clk";
 		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk";
 
-		adi,clocks-clk-pll-vco-freq_khz = <12288000>;
 		adi,clocks-device-clock_khz = <122880>;
-		adi,clocks-clk-pll-hs-div = <4>;
+		adi,clocks-clk-pll-vco-freq_khz = <9830400>;
 		adi,clocks-clk-pll-vco-div = <2>;
+		adi,clocks-clk-pll-hs-div = <4>;
 
+		adi,rx-settings-rx-pll-lo-frequency_hz = /bits/64 <829500000>;
+		adi,tx-settings-tx-pll-lo-frequency_hz = /bits/64 <874500000>;
+		//adi,obs-settings-obs-rx-channels-enable = <0x03>;
 		/* rx framer */
+		//adi,jesd204-rx-framer-bank-id
+		//adi,jesd204-rx-framer-device-id
+		//adi,jesd204-rx-framer-lane0-id
 		adi,jesd204-rx-framer-m = <4>;
+		//adi,jesd204-rx-framer-k = <32>;
 		adi,jesd204-rx-framer-scramble = <1>;
-		adi,jesd204-rx-framer-serializer-lanes-enabled = <2>;
+		//adi,jesd204-rx-framer-external-sysref = <1>;
+		adi,jesd204-rx-framer-serializer-lanes-enabled = <4>;
+		//adi,jesd204-rx-framer-serializer-lane-crossbar
+		//adi,jesd204-rx-framer-serializer-amplitude
+		//adi,jesd204-rx-framer-pre-emphasis
+		//adi,jesd204-rx-framer-invert-lane-polarity
+		//adi,jesd204-rx-framer-lmfc-offset
+		//adi,jesd204-rx-framer-new-sysref-on-relink
+		//adi,jesd204-rx-framer-enable-auto-chan-xbar
+		//adi,jesd204-rx-framer-obs-rx-syncb-select
+		//adi,jesd204-rx-framer-rx-syncb-mode
+		//adi,jesd204-rx-framer-over-sample
 
 		/* obs frame */
+		//adi,jesd204-obs-framer-bank-id
+		//adi,jesd204-obs-framer-device-id
+		//adi,jesd204-obs-framer-lane0-id
 		adi,jesd204-obs-framer-m = <2>;
+		//adi,jesd204-obs-framer-k
 		adi,jesd204-obs-framer-scramble = <1>;
+		//adi,jesd204-obs-framer-external-sysref
 		adi,jesd204-obs-framer-serializer-lanes-enabled = <1>;
-		adi,jesd204-obs-framer-over-sample = <0>;
+		//adi,jesd204-obs-framer-serializer-lane-crossbar
+		//adi,jesd204-obs-framer-serializer-amplitude
+		//adi,jesd204-obs-framer-pre-emphasis
+		//adi,jesd204-obs-framer-invert-lane-polarity
+		//adi,jesd204-obs-framer-lmfc-offset
+		//adi,jesd204-obs-framer-new-sysref-on-relink
+		//adi,jesd204-obs-framer-enable-auto-chan-xbar
+		//adi,jesd204-obs-framer-obs-rx-syncb-select
+		//adi,jesd204-obs-framer-rx-syncb-mode
+		//adi,jesd204-obs-framer-over-sample
 
 		/* tx deframer */
+		//adi,jesd204-deframer-bank-id
+		//adi,jesd204-deframer-device-id
+		//adi,jesd204-deframer-lane0-id
 		adi,jesd204-deframer-m = <4>;
+		//adi,jesd204-deframer-k
 		adi,jesd204-deframer-scramble = <1>;
-		adi,jesd204-deframer-serializer-lanes-enabled = <3>;
+		//adi,jesd204-deframer-external-sysref
+		adi,jesd204-deframer-deserializer-lanes-enabled = <5>;
+		//adi,jesd204-deframer-deserializer-lane-crossbar
+		//adi,jesd204-deframer-eq-setting
+		//adi,jesd204-deframer-invert-lane-polarity
+		//adi,jesd204-deframer-lmfc-offset
+		//adi,jesd204-deframer-new-sysref-on-relink
+		//adi,jesd204-deframer-enable-auto-chan-xbar
+		//adi,jesd204-deframer-tx-syncb-mode
 
 		adi,rx-profile-adc-div = <1>;
 		adi,rx-profile-rx-fir-decimation = <2>;
 		adi,rx-profile-rx-dec5-decimation = <5>;
 		adi,rx-profile-en-high-rej-dec5 = <1>;
 		adi,rx-profile-rhb1-decimation = <2>;
-		adi,rx-profile-iq-rate_khz = <76800>;
-		adi,rx-profile-rf-bandwidth_hz = <60000000>;
-		adi,rx-profile-rx-bbf-3db-corner_khz = <60000>;
+		adi,rx-profile-iq-rate_khz = <61440>;
+		adi,rx-profile-rf-bandwidth_hz = <40000000>;
+		adi,rx-profile-rx-bbf-3db-corner_khz = <40000>;
 
 		adi,obs-profile-adc-div = <1>;
 		adi,obs-profile-rx-fir-decimation = <2>;
 		adi,obs-profile-rx-dec5-decimation = <5>;
 		adi,obs-profile-en-high-rej-dec5 = <1>;
 		adi,obs-profile-rhb1-decimation = <1>;
-		adi,obs-profile-iq-rate_khz = <153600>;
-		adi,obs-profile-rf-bandwidth_hz = <120000000>;
-		adi,obs-profile-rx-bbf-3db-corner_khz = <60000>;
+		adi,obs-profile-iq-rate_khz = <122880>;
+		adi,obs-profile-rf-bandwidth_hz = <100000000>;
+		adi,obs-profile-rx-bbf-3db-corner_khz = <50000>;
 
 		adi,tx-profile-dac-div = <1>; //DACDIV_2p5
 		adi,tx-profile-tx-fir-interpolation = <1>;
 		adi,tx-profile-thb1-interpolation = <2>;
 		adi,tx-profile-thb2-interpolation = <2>;
 		adi,tx-profile-tx-input-hb-interpolation = <1>;
-		adi,tx-profile-iq-rate_khz = <153600>;
-		adi,tx-profile-primary-sig-bandwidth_hz = <50000000>;
-		adi,tx-profile-rf-bandwidth_hz = <120000000>;
-		adi,tx-profile-tx-dac-3db-corner_khz = <120000>;
-		adi,tx-profile-tx-bbf-3db-corner_khz = <60000>;
+		adi,tx-profile-iq-rate_khz = <122880>;
+		adi,tx-profile-primary-sig-bandwidth_hz = <20000000>;
+		adi,tx-profile-rf-bandwidth_hz = <100000000>;
+		adi,tx-profile-tx-dac-3db-corner_khz = <100000>;
+		adi,tx-profile-tx-bbf-3db-corner_khz = <50000>;
 	};
 
 };
@@ -160,20 +205,20 @@
 
 	compatible = "ad9375";
 
-	adi,dpd-damping = <5>;
-	adi,dpd-num-weights = <1>;
+	adi,dpd-damping = <10>;
+	adi,dpd-num-weights = <2>;
 	adi,dpd-model-version = <2>;
 	adi,dpd-high-power-model-update = <1>;
 	adi,dpd-model-prior-weight = <20>;
 	adi,dpd-robust-modeling = <0>;
 	adi,dpd-samples = <512>;
-	adi,dpd-outlier-threshold = <4096>;
-	adi,dpd-additional-delay-offset = <0>;
+	adi,dpd-outlier-threshold = <1638>;
+	adi,dpd-additional-delay-offset = <(-1)>;
 	adi,dpd-path-delay-pn-seq-level = <255>;
-	adi,dpd-weights0-real = <64>;
-	adi,dpd-weights0-imag = <0>;
-	adi,dpd-weights1-real = <0>;
-	adi,dpd-weights1-imag = <0>;
+	adi,dpd-weights0-real = <0>;
+	adi,dpd-weights0-imag = <(-2)>;
+	adi,dpd-weights1-real = <(-64)>;
+	adi,dpd-weights1-imag = <(-2)>;
 	adi,dpd-weights2-real = <0>;
 	adi,dpd-weights2-imag = <0>;
 
