--- a/zynq-zed.dtsi
+++ b/zynq-zed.dtsi
@@ -21,6 +21,281 @@
 		drv-vbus;
 	};
 
+	amba_pl {
+		#address-cells = <0x1>;
+		#size-cells = <0x1>;
+		compatible = "simple-bus";
+		ranges;
+
+		dfe_rom@8c008000 {
+			compatible = "xlnx,dfe-rom-1.0";
+			reg = <0x8c008000 0x4000>;
+		};
+
+		dfe_scratch@8c000000 {
+			compatible = "xlnx,dfe-scratch-1.0";
+			reg = <0x8c000000 0x1000>;
+		};
+
+		dfe_clk_ctrl@8c001000 {
+			compatible = "xlnx,dfe-clk-ctrl-1.0";
+			reg = <0x8c001000 0x1000>;
+		};
+
+		dfe_ext_sync@8e002000 {
+			compatible = "xlnx,dfe-ext-sync-1.0";
+			reg = <0x8e002000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,phases = <0x1>;
+			xlnx,rate = <0x8>;
+		};
+
+		dfe_glitch_protect@8e005000 {
+			compatible = "xlnx,dfe-glitch-protect-1.0";
+			reg = <0x8e005000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,output-reg = <0x2>;
+			xlnx,phases = <0x1>;
+		};
+
+		jesd204@8e004000 {
+			compatible = "xlnx,jesd204-7.1";
+			reg = <0x8e004000 0x1000>;
+			xlnx,axiclk-freq = "100.0";
+			xlnx,component-name = "zynq_1_jesd204_rx_0_0";
+			xlnx,default-f = <0x1>;
+			xlnx,default-k = <0x20>;
+			xlnx,default-scr = <0x0>;
+			xlnx,default-sysref-always = <0x0>;
+			xlnx,default-sysref-required = <0x0>;
+			xlnx,drpclk-freq = "100.0";
+			xlnx,global-clk-sel = "true";
+			xlnx,gt-line-rate = "9.8304";
+			xlnx,gt-refclk-freq = "245.760";
+			xlnx,lanes = <0x1>;
+			xlnx,lmfc-buffer-size = <0x6>;
+			xlnx,node-is-transmit = <0x0>;
+			xlnx,pll-selection = <0x3>;
+			xlnx,speedgrade = "-2";
+			xlnx,supportlevel = <0x0>;
+			xlnx,sysref-sampling-edge = <0x0>;
+			xlnx,transceiver = "GTXE2";
+			xlnx,transceivercontrol = "false";
+			xlnx,use-jspat = "false";
+			xlnx,use-rpat = "false";
+		};
+
+		jesd204@8e003000 {
+			compatible = "xlnx,jesd204-7.1";
+			reg = <0x8e003000 0x1000>;
+			xlnx,axiclk-freq = "100.0";
+			xlnx,component-name = "zynq_1_jesd204_tx_0_0";
+			xlnx,default-f = <0x1>;
+			xlnx,default-k = <0x20>;
+			xlnx,default-scr = <0x0>;
+			xlnx,default-sysref-always = <0x0>;
+			xlnx,default-sysref-required = <0x0>;
+			xlnx,drpclk-freq = "100.0";
+			xlnx,global-clk-sel = "true";
+			xlnx,gt-line-rate = "9.8304";
+			xlnx,gt-refclk-freq = "245.760";
+			xlnx,lanes = <0x1>;
+			xlnx,lmfc-buffer-size = <0x6>;
+			xlnx,node-is-transmit = <0x1>;
+			xlnx,pll-selection = <0x3>;
+			xlnx,speedgrade = "-2";
+			xlnx,supportlevel = <0x0>;
+			xlnx,sysref-sampling-edge = <0x0>;
+			xlnx,transceiver = "GTXE2";
+			xlnx,transceivercontrol = "false";
+			xlnx,use-jspat = "true";
+			xlnx,use-rpat = "true";
+		};
+
+		dfe_capture_mux@87008000 {
+			compatible = "xlnx,dfe-capture-mux-1.0";
+			reg = <0x87008000 0x1000>;
+			xlnx,adc-phases = <0x1>;
+			xlnx,adc-rate = <0x8>;
+			xlnx,antennas = <0x1>;
+			xlnx,cfr-phases = <0x1>;
+			xlnx,cfr-rate = <0x8>;
+			xlnx,dac-phases = <0x1>;
+			xlnx,dac-rate = <0x8>;
+			xlnx,dpd-phases = <0x1>;
+			xlnx,dpd-rate = <0x8>;
+			xlnx,output-reg = <0x2>;
+			xlnx,vec-rx-phases = <0x1>;
+			xlnx,vec-rx-rate = <0x8>;
+			xlnx,vec-tx-phases = <0x1>;
+			xlnx,vec-tx-rate = <0x8>;
+		};
+
+		pc_cfr@85000000 {
+			compatible = "xlnx,pc-cfr-6.1";
+			reg = <0x85000000 0x100000>;
+			xlnx,axis-dyn-ctrl-tdata-width = <0x8>;
+			xlnx,axis-dyn-ctrl-tuser-width = <0x1>;
+			xlnx,axis-tdata-width = <0x20>;
+			xlnx,axis-tuser-width = <0x8>;
+			xlnx,cfr-1x-data-mode = <0x0>;
+			xlnx,clks-per-samp = <0x1>;
+			xlnx,component-name = "zynq_1_CFR_1_0";
+			xlnx,data-width = <0x10>;
+			xlnx,elaboration-dir = "./";
+			xlnx,max-cp-len = <0x7ff>;
+			xlnx,max-peak-delay = <0xc8>;
+			xlnx,mif-size = <0x1>;
+			xlnx,num-antennas = <0x1>;
+			xlnx,num-cpgs-iter0 = <0x8>;
+			xlnx,num-cpgs-iter1 = <0x6>;
+			xlnx,num-cpgs-iter2 = <0x4>;
+			xlnx,num-cpgs-iter3 = <0x4>;
+			xlnx,num-cpgs-iter4 = <0x4>;
+			xlnx,num-cpgs-iter5 = <0x4>;
+			xlnx,num-cpgs-iter6 = <0x4>;
+			xlnx,num-cpgs-iter7 = <0x4>;
+			xlnx,num-filters = <0x2>;
+			xlnx,num-iterations = <0x4>;
+			xlnx,real-complex-cp = <0x1>;
+			xlnx,wcfr-mode = <0x0>;
+			xlnx,write-filters = <0x1>;
+			xlnx,xdevicefamily = "zynq";
+		};
+
+		dfe_gain_ctrl@86001000 {
+			compatible = "xlnx,dfe-gain-ctrl-1.0";
+			reg = <0x86001000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,phases = <0x1>;
+		};
+
+		dpd@80000000 {
+			compatible = "generic-uio";
+			interrupt-parent = <0x4>;
+			interrupts = <0x0 0x1d 0x1>;
+			reg = <0x80000000 0x4000000 0x84000000 0x20000>;
+		};
+
+		dfe_gain_ctrl@86002000 {
+			compatible = "xlnx,dfe-gain-ctrl-1.0";
+			reg = <0x86002000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,phases = <0x1>;
+		};
+
+		dfe_vec_mux@86003000 {
+			compatible = "xlnx,dfe-vec-mux-1.0";
+			reg = <0x86003000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,output-reg = <0x2>;
+			xlnx,phases = <0x1>;
+		};
+
+		dfe_dlb@87006000 {
+			compatible = "xlnx,dfe-dlb-1.0";
+			reg = <0x87006000 0x2000>;
+			xlnx,antennas = <0x1>;
+			xlnx,has-fb-model = <0x1>;
+			xlnx,has-pa-model = <0x1>;
+			xlnx,phases = <0x1>;
+			xlnx,xdevicefamily = "zynq";
+		};
+
+		dfe_equ@87005000 {
+			compatible = "xlnx,dfe-equ-1.0";
+			reg = <0x87005000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,equ-taps = <0x10>;
+			xlnx,has-equ = <0x1>;
+			xlnx,output-reg = <0x2>;
+			xlnx,phases = <0x1>;
+			xlnx,xdevicefamily = "zynq";
+		};
+
+		dfe_equ@87004000 {
+			compatible = "xlnx,dfe-equ-1.0";
+			reg = <0x87004000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,equ-taps = <0x10>;
+			xlnx,has-equ = <0x1>;
+			xlnx,output-reg = <0x2>;
+			xlnx,phases = <0x1>;
+			xlnx,xdevicefamily = "zynq";
+		};
+
+		dfe_cif@87003000 {
+			compatible = "xlnx,dfe-cif-1.0";
+			reg = <0x87003000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,has-cif = <0x1>;
+			xlnx,phases = <0x1>;
+			xlnx,tuser-width = <0x8>;
+		};
+
+		dfe_time_ctrl@8d050000 {
+			compatible = "xlnx,dfe-time-ctrl-1.0";
+			reg = <0x8d050000 0x10000>;
+			xlnx,clock-rate = <0x8>;
+			xlnx,hd-data-width = <0x20>;
+			xlnx,hd2tm-antennas = <0x1>;
+			xlnx,pad-mode = <0x2>;
+			xlnx,slave-mode = <0x1>;
+			xlnx,test-mode = <0x0>;
+			xlnx,tm-antennas = <0x1>;
+			xlnx,tm-data-width = <0x20>;
+			xlnx,tuser-width = <0x8>;
+		};
+
+		dfe_vec_store@8d010000 {
+			compatible = "xlnx,dfe-vec-store-1.0";
+			reg = <0x8d010000 0x10000>;
+			xlnx,data-width = <0x80>;
+			xlnx,has-desc-if = <0x1>;
+			xlnx,max-burst-length = <0x40>;
+			xlnx,tfifo-level-width = <0x14>;
+			xlnx,tfifo-size-bytes = <0x2000>;
+		};
+
+		memory-controller@40000000 {
+			compatible = "xlnx,mig-7series-4.0";
+			device_type = "reserved-memory";
+			reg = <0x40000000 0x40000000>;
+		};
+
+		dfe_time_ctrl@8d040000 {
+			compatible = "xlnx,dfe-time-ctrl-1.0";
+			reg = <0x8d040000 0x10000>;
+			xlnx,clock-rate = <0x8>;
+			xlnx,hd-data-width = <0x20>;
+			xlnx,hd2tm-antennas = <0x1>;
+			xlnx,pad-mode = <0x1>;
+			xlnx,slave-mode = <0x0>;
+			xlnx,test-mode = <0x0>;
+			xlnx,tm-antennas = <0x1>;
+			xlnx,tm-data-width = <0x20>;
+			xlnx,tuser-width = <0x8>;
+		};
+
+		dfe_vec_fetch@8d000000 {
+			compatible = "xlnx,dfe-vec-fetch-1.0";
+			reg = <0x8d000000 0x10000>;
+			xlnx,data-width = <0x80>;
+			xlnx,has-desc-if = <0x1>;
+			xlnx,max-burst-length = <0x40>;
+			xlnx,tfifo-level-width = <0x14>;
+			xlnx,tfifo-size-bytes = <0x2000>;
+			xlnx,user-width = <0x8>;
+		};
+
+		dfe_gain_ctrl@8d090000 {
+			compatible = "xlnx,dfe-gain-ctrl-1.0";
+			reg = <0x8d090000 0x1000>;
+			xlnx,antennas = <0x1>;
+			xlnx,phases = <0x1>;
+		};
+	};
+
 };
 
 &eth {
