--- a/zynq-7000.dtsi
+++ b/zynq-7000.dtsi
@@ -363,6 +363,11 @@
 			syscon = <&slcr>;
 		};
 
+		fclk0 {
+			compatible  = "ikwzm,fclkcfg-0.10.a";
+			clocks      = <&clkc 15>;
+		};
+
 		global_timer: timer@f8f00200 {
 			compatible = "arm,cortex-a9-global-timer";
 			reg = <0xf8f00200 0x20>;
