--- a/zynq-zed.dtsi
+++ b/zynq-zed.dtsi
@@ -27,6 +27,22 @@
 		compatible = "simple-bus";
 		ranges;
 
+		zptty@40001000 {
+			compatible = "ikwzm,zptty-0.10.a";
+			minor-number = <0>;
+			reg = <0x40001000 0x80>;
+			interrupt-parent = <&intc>;
+			interrupts = <0x0 29 0x4>;
+		};
+
+		//vvtpackdev_0@40000C20 {
+		//	compatible = "xlnx,opb-vvtpackdev-1.00.b";
+		//	reg = <0x40000C20 0x10000>;
+		//	interrupt-parent = <&intc>;
+		//	interrupts = <0 29 4>;
+		//	clock = <100000000>;
+		//};
+
 		dfe_rom@8c008000 {
 			compatible = "xlnx,dfe-rom-1.0";
 			reg = <0x8c008000 0x4000>;
@@ -170,12 +186,12 @@
 			xlnx,phases = <0x1>;
 		};
 
-		dpd@80000000 {
-			compatible = "generic-uio";
-			interrupt-parent = <0x4>;
-			interrupts = <0x0 0x1d 0x1>;
-			reg = <0x80000000 0x4000000 0x84000000 0x20000>;
-		};
+		//dpd@80000000 {
+		//	compatible = "generic-uio";
+		//	interrupt-parent = <0x4>;
+		//	interrupts = <0x0 33 0x1>;
+		//	reg = <0x80000000 0x4000000 0x84000000 0x20000>;
+		//};
 
 		dfe_gain_ctrl@86002000 {
 			compatible = "xlnx,dfe-gain-ctrl-1.0";
