--- a/zynq.dtsi
+++ b/zynq.dtsi
@@ -43,6 +43,7 @@
 	aliases: aliases {
 		ethernet0 = &eth;
 		serial0 = &uart1;
+		serial1 = &uart0;
 	};
 };
 
@@ -58,6 +59,11 @@
 &uart1 {
 	status = "okay";
 };
+
+&uart0 {
+	status = "okay";
+};
+
 
 &sdhci0 {
 	status = "okay";
