为追溯版本，加入编译时间

--- a/zynq-zed.dtsi
+++ b/zynq-zed.dtsi
@@ -2,6 +2,9 @@
 
 / {
 	model = "Xilinx Zynq ZED";
+	//dtc_st = "2018-07-13 16:40:25";
+	//git_hash= "we323afdf33";
+/include/ "dt_ver.dtsi"
 	memory {
 		device_type = "memory";
 		reg = <0x000000000 0x20000000>;
