--- a/zynq-zed.dtsi
+++ b/zynq-zed.dtsi
@@ -187,12 +187,12 @@
 			xlnx,phases = <0x1>;
 		};
 
-		//dpd@80000000 {
-		//	compatible = "generic-uio";
-		//	interrupt-parent = <0x4>;
-		//	interrupts = <0x0 33 0x1>;
-		//	reg = <0x80000000 0x4000000 0x84000000 0x20000>;
-		//};
+		dpd@80000000 {
+			compatible = "generic-uio";
+			interrupt-parent = <0x4>;
+			interrupts = <0x0 30 0x1>;
+			reg = <0x80000000 0x4000000 0x84000000 0x20000>;
+		};
 
 		dfe_gain_ctrl@86002000 {
 			compatible = "xlnx,dfe-gain-ctrl-1.0";
