--- a/zynq-zed.dtsi
+++ b/zynq-zed.dtsi
@@ -348,51 +348,59 @@
 		compatible = "n25q512a11";
 		reg = <0x0>;
 		spi-max-frequency = <50000000>;
-//		partition@0x00000000 {
-//			label = "boot";
-//			reg = <0x00000000 0x00500000>;
-//		};
-//		partition@0x00500000 {
-//			label = "bootenv";
-//			reg = <0x00500000 0x00020000>;
-//		};
-//		partition@0x00520000 {
-//			label = "config";
-//			reg = <0x00520000 0x00020000>;
-//		};
-//		partition@0x00540000 {
-//			label = "image";
-//			reg = <0x00540000 0x00a80000>;
-//		};
-//		partition@0x00fc0000 {
-//			label = "spare";
-//			reg = <0x00fc0000 0x00000000>;
-//		};
+
+		partition@0 {
+			label = "qspif.BL";
+			reg = <0x00000000 0x000C0000>;
+		};
 
 		partition@1 {
-			label = "QSPIFLASH.bootloader";
-			reg = <0x100000 0x020000>;	//0x020,000 =128KB
+			label = "qspif.ENV";
+			reg = <0x000C0000 0x00020000>;
 		};
 		partition@2 {
-			label = "QSPIFLASH.bitstream";
-			reg = <0x120000 0x600000>;	//0x600,000 = 6MB
+			label = "qspif.DT";
+			reg = <0x000E0000 0x00020000>;
 		};
+		//-----------------------------------------
 		partition@3 {
-			label = "QSPIFLASH.kernel";
-			reg = <0x720000 0x600000>;	//0x600,000 = 6MB
+			label = "qspif.BIT";
+			reg = <0x00100000 0x00500000>;
 		};
 		partition@4 {
-			label = "QSPIFLASH.devicetree";
-			reg = <0xD20000 0x020000>;	//0x020,000 =128KB
+			label = "qspif.KNL";
+			reg = <0x00600000 0x00500000>;
 		};
+		//-----------------------------------------
 		partition@5 {
-			label = "QSPIFLASH.rootfs";
-			reg = <0xD40000 0x00000000>;	//0xC00,000=12MB, 0x2000,000=32MB
+			label = "qspif.ROOTFS";
+			reg = <0x00B00000 0x01E00000>;
 		};
-		//partition@6 {
-		//	label = "QSPIFLASH.data";
-		//	reg = <0x2D40000 0x00000000>;
-		//};
+		partition@6 {
+			label = "qspif.APPDATA";
+			reg = <0x02900000 0x00C00000>;
+		};
+		//-----------------------------------------
+		partition@7 {
+			label = "qspif.BL.bak";
+			reg = <0x03500000 0x000C0000>;
+		};
+		partition@8 {
+			label = "qspif.ENV.bak";
+			reg = <0x035C0000 0x00020000>;
+		};
+		partition@9 {
+			label = "qspif.DT.bak";
+			reg = <0x035E0000 0x00020000>;
+		};
+		partition@10 {
+			label = "qspif.BIT.bak";
+			reg = <0x03600000 0x00500000>;
+		};
+		partition@11 {
+			label = "qspif.KNL.bak";
+			reg = <0x03B00000 0x00500000>;
+		};
 
 	};
 };
