--- a/ad9523.dtsi
+++ b/ad9523.dtsi
@@ -34,10 +34,12 @@
 	
 			/* PLL1 config */
 			adi,pll1-feedback-div = <1>;
-			adi,pll1-charge-pump-current-nA = <5000>;
+			adi,pll1-charge-pump-current-nA = <63500>;
 	
 	
 			/* PLL2 config */
+			adi,pll2-ndiv-a-cnt = <0>;
+			adi,pll2-ndiv-b-cnt = <30>;
 			adi,pll2-vco-diff-m1 = <3>; /* use 5 for 184320000 output device clock */
 			adi,pll2-n2-div = <40>; /* N / M1 */
 			adi,pll2-r1-div = <1>;
@@ -66,16 +68,16 @@
 				adi,channel-divider = <10>;
 				adi,signal-source = <SOURCE_VCO>;
 			};
-	
-			ad9528_0_c6: channel@6 {
-				reg = <6>;
-				adi,extended-name = "GTP_MAIN_CLK";
+
+			ad9528_0_c4: channel@4 {
+				reg = <4>;
+				adi,extended-name = "FPGA_CLK";
 				adi,driver-mode = <DRIVER_MODE_LVDS>;
 				adi,divider-phase = <0>;
 				adi,channel-divider = <10>;
 				adi,signal-source = <SOURCE_VCO>;
 			};
-	
+
 			ad9528_0_c5: channel@5 {
 				reg = <5>;
 				adi,extended-name = "GTP_SECOND_CLK";
@@ -84,23 +86,23 @@
 				adi,channel-divider = <10>;
 				adi,signal-source = <SOURCE_VCO>;
 			};
-	
+
+			ad9528_0_c6: channel@6 {
+				reg = <6>;
+				adi,extended-name = "GTP_MAIN_CLK";
+				adi,driver-mode = <DRIVER_MODE_LVDS>;
+				adi,divider-phase = <0>;
+				adi,channel-divider = <10>;
+				adi,signal-source = <SOURCE_VCO>;
+			};
+
 			ad9528_0_c7: channel@7 {
 				reg = <7>;
 				adi,extended-name = "AD937X_CLK";
 				adi,driver-mode = <DRIVER_MODE_LVDS>;
 				adi,divider-phase = <0>;
 				adi,channel-divider = <10>;
-				adi,signal-source = <SOURCE_SYSREF_VCO>;
-			};
-	
-			ad9528_0_c4: channel@4 {
-				reg = <4>;
-				adi,extended-name = "FPGA_CLK";
-				adi,driver-mode = <DRIVER_MODE_LVDS>;
-				adi,divider-phase = <0>;
-				adi,channel-divider = <10>;
-				adi,signal-source = <SOURCE_SYSREF_VCO>;
+				adi,signal-source = <SOURCE_VCO>;
 			};
 	};
 
@@ -115,7 +117,7 @@
 		spi-max-frequency = <1000000>;
 
 		/* Clocks */
-		clocks = <&clk0_ad9528 7>, <&clk0_ad9528 7>, <&clk0_ad9528 7>, <&clk0_ad9528 7>, <&clk0_ad9528 6>;
+		clocks = <&clk0_ad9528 7>, <&clk0_ad9528 7>, <&clk0_ad9528 7>, <&clk0_ad9528 7>, <&clk0_ad9528 7>;
 		clock-names = "jesd_rx_clk", "jesd_tx_clk", "jesd_rx_os_clk", "dev_clk", "fmc_clk";
 		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk";
 
