--- a/zynq-zed.dtsi
+++ b/zynq-zed.dtsi
@@ -322,7 +322,8 @@
 	phy0: phy@0 {
 		device_type = "ethernet-phy";
 		reg = <0x0>;
-		marvell,reg-init=<3 16 0xff00 0x1e 3 17 0xfff0 0x0a>;
+		marvell,reg-init=<3 16 0xff00 0x1e 
+		                  3 17 0xfff0 0x0a>;
 	};
 };
 
