ad9545 dt 传入 reg map 测试

--- a/ad9523.dtsi
+++ b/ad9523.dtsi
@@ -27,16 +27,115 @@
 
 			clock-output-names = "ad9508-1_out0", "ad9508-1_out1", "ad9508-1_out2";
 
-			ad9545,regmap-init=<0x0627 0xB0
-                                         0x0628 0x00
-                                         0x0629 0x10
-                                         0x062A 0x27
-                                         0x062B 0x20
-                                         0x062C 0x44
-                                         0x062D 0xF4
-                                         0x062E 0x01
-                                         0x0628 0x06>;
-
+			//ad9545,regmap-init=<0x0627 0xB0
+                        //                 0x0628 0x00
+                        //                 0x0629 0x10
+                        //                 0x062A 0x27
+                        //                 0x062B 0x20
+                        //                 0x062C 0x44
+                        //                 0x062D 0xF4
+                        //                 0x062E 0x01
+                        //                 0x0628 0x06>;
+//			ad9545,regmap-init=<0x000 0x18
+//					    0x001 0x00
+//					    0x003 0x05
+//					    0x004 0xFF
+//					    0x005 0x00
+//					    0x006 0x00
+//					    0x00a 0x00
+//					    0x00b 0x00
+//					    0x00c 0x56
+//					    0x00d 0x04
+//					    0x00f 0x00
+//					    0x100 0x7D
+//					    0x101 0x00
+//					    0x102 0x0A
+//					    0x103 0x00
+//					    0x104 0x2C
+//					    0x105 0x01
+//					    0x106 0x7F
+//					    0x107 0x03
+//					    0x108 0x08
+//					    0x109 0x14
+//					    0x10a 0x02
+//					    0x10b 0x00
+//					    0x200 0xFF
+//					    0x201 0x1E
+//					    0x202 0x03
+//					    0x203 0x05
+//					    0x204 0x03
+//					    0x205 0x00
+//					    0x206 0x00
+//					    0x207 0x00
+//					    0x208 0x27
+//					    0x209 0x00
+//					    0x300 0x40
+//					    0x301 0x00
+//					    0x302 0x00
+//					    0x303 0x00
+//					    0x304 0x00
+//					    0x305 0x09
+//					    0x306 0x00
+//					    0x307 0x00
+//					    0x308 0x09
+//					    0x309 0x00
+//					    0x30a 0x00
+//					    0x30b 0x09
+//					    0x30c 0x00
+//					    0x30d 0x00
+//					    0x30e 0x27
+//					    0x30f 0x00
+//					    0x310 0x00
+//					    0x311 0x09
+//					    0x312 0x00
+//					    0x313 0x00
+//					    0x314 0x09
+//					    0x315 0x40
+//					    0x316 0x00
+//					    0x317 0x00
+//					    0x318 0x00
+//					    0x319 0x00
+//					    0x31a 0x09
+//					    0x31b 0x00
+//					    0x31c 0x00
+//					    0x31d 0x27
+//					    0x31e 0x00
+//					    0x31f 0x80
+//					    0x320 0x13
+//					    0x321 0x40
+//					    0x322 0x00
+//					    0x323 0x00
+//					    0x324 0x20
+//					    0x325 0x00
+//					    0x326 0x00
+//					    0x327 0x20
+//					    0x328 0x00
+//					    0x329 0x00
+//					    0x32a 0x00
+//					    0x32b 0x00
+//					    0x32c 0x00
+//					    0x32d 0x00
+//					    0x32e 0x00
+//					    0x00F 0x01
+//					    0x203 0x04
+//					    0x00F 0x01
+//					    0x400 0x19
+//					    0x401 0x00
+//					    0x402 0x00
+//					    0x00F 0x01
+//					    0x403 0x90
+//					    0x404 0x04
+//					    0x500 0x10
+//					    0x501 0x03
+//					    0x502 0x38
+//					    0x503 0xFF
+//					    0x504 0xFF
+//					    0x505 0x00
+//					    0x506 0x00
+//					    0x507 0x00
+//					    0x508 0x00
+//					    0x509 0x00
+//					    0xffe 0x00 >;
 			ad9545_0_c0:channel@0 {
 				reg = <0>;
 				extended-name = "SYSREF";
