--- a/zynq-zed.dtsi
+++ b/zynq-zed.dtsi
@@ -352,56 +352,50 @@
 
 		partition@0 {
 			label = "qspif.BLR";
-			reg = <0x00000000 0x000C0000>;
+			reg = <0x00000000 0x000E0000>;
 		};
-
 		partition@1 {
-			label = "qspif.ENV";
-			reg = <0x000C0000 0x00020000>;
+			label = "qspif.BLR.bak";
+			reg = <0x000E0000 0x000E0000>;
 		};
 		partition@2 {
-			label = "qspif.DTB";
-			reg = <0x000E0000 0x00020000>;
+			label = "qspif.ENV";
+			reg = <0x001C0000 0x00020000>;
 		};
 		partition@3 {
-			label = "qspif.KNL";
-			reg = <0x00100000 0x00500000>;
+			label = "qspif.ENV.bak";
+			reg = <0x001E0000 0x00020000>;
 		};
-		//-----------------------------------------
 		partition@4 {
-			label = "qspif.SYSROOT";
-			reg = <0x00600000 0x01400000>;
+			label = "qspif.DTB";
+			reg = <0x00200000 0x00080000>;
 		};
-		//-----------------------------------------
 		partition@5 {
-			label = "qspif.BIT";
-			reg = <0x01A00000 0x00600000>;
-		};
-		partition@6 {
-			label = "qspif.BIT.ext";
-			reg = <0x02000000 0x00700000>;
-		};
-		//-----------------------------------------
-		partition@7 {
-			label = "qspif.APP";
-			reg = <0x02700000 0x01300000>;
-		};
-		//-----------------------------------------
-		partition@8 {
-			label = "qspif.KNL.bak";
-			reg = <0x03A00000 0x00500000>;
-		};
-		partition@9 {
 			label = "qspif.DTB.bak";
-			reg = <0x03F00000 0x00020000>;
+			reg = <0x00280000 0x00080000>;
+		};
+//------------------3M cut---------------------
+		partition@6 {
+			label = "qspif.KNL";
+			reg = <0x00300000 0x00500000>;
+		};
+		partition@7 {
+			label = "qspif.KNL.bak";
+			reg = <0x00800000 0x00500000>;
+		};
+//------------------13M cut--------------------
+		partition@8 {
+			label = "qspif.SYSROOT";
+			reg = <0x00D00000 0x01300000>;
+		};
+//------------------32M cut--------------------
+		partition@9 {
+			label = "qspif.OPTFS";
+			reg = <0x02000000 0x01300000>;
 		};
 		partition@10 {
-			label = "qspif.ENV.bak";
-			reg = <0x03F20000 0x00020000>;
-		};
-		partition@11 {
-			label = "qspif.BLR.bak";
-			reg = <0x03F40000 0x000C0000>;
+			label = "qspif.BIT";
+			reg = <0x03300000 0x00D00000>;
 		};
 
 	};
